<resources>
    <string name="app_name">TeamWE APP</string>
    <string name="player_login">p_login</string>
    <string name="player_username">p_uname</string>
    <string name="player_usernme">Username</string>
    <string name="player_password">Password</string>
    <string name="button_login">LOGIN</string>
    <string name="button_signin">SIGN IN</string>
    <string name="player_pword">Password</string>
    <string name="username">username</string>
    <string name="playertitle">PLAYERS</string>
    <string name="welcomelogin">LOGIN</string>
    <string name="welcomeregister">REGISTER</string>
    <string name="register_text">Welcome to Marlborough Rugby Club!     In order to register with this app and join our great club, please see one of our many coaches or leave your details with the receptionists, who will give them to a coach. One of our coaches will then register you onto the app, and will give you your unique login.</string>
    <string name="register_message">In order to register with this app and join our great club, please see one of our many coaches or leave your details with the receptionists, who will give them to a coach. One of our coaches will then register you onto the app, and will give you your unique login.</string>
    <string name="register_welcome">Welcome to Marlborough Rugby Club!</string>
    <string name="register_register">REGISTER</string>
    <string name="p_username">Username</string>
    <string name="coaches">COACH</string>
    <string name="coachusername">Username</string>
    <string name="coachpassword">Password</string>
    <string name="coachsignin">SIGN IN</string>
    <string name="Coach">COACHES</string>
    <string name="coach">COACHES</string>
    <string name="homewelcome">WELCOME</string>
    <string name="viewallcredentials">VIEW ALL</string>
    <string name="loginchoices">LOGIN</string>
    <string name="coacheschoices">COACHES</string>
    <string name="playerchoices">PLAYERS</string>
    <string name="playersbuttonclickmethod">onPlayersClick</string>
    <string name="cal_tv">CALENDAR</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_logout">LOG OUT</string>
    <string name="btn_arrival">ARRIVAL</string>
    <string name="btn_departure">DEPARTURE</string>
    <string name="tv_welcome">WELCOME BACK PLAYER</string>
    <string name="tv_arrivalmsg">If you are arriving to training, tap this button:</string>
    <string name="tv_departuremsg">If you are leaving the training grounds, tap this button:</string>
</resources>