<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_registers"
        android:layout_width="150dp"
        android:layout_height="72dp"
        android:fontFamily="@font/assistant_extralight"
        android:text="@string/welcomeregister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728" />

    <Button
        android:id="@+id/btn_logins"
        android:layout_width="150dp"
        android:layout_height="72dp"
        android:fontFamily="@font/assistant_extralight"
        android:text="@string/welcomelogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_registers"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="237dp"
        android:layout_height="69dp"
        android:fontFamily="@font/assistant_extralight"
        android:text="@string/homewelcome"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_teamwelogo"
        android:layout_width="268dp"
        android:layout_height="186dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/tv_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/teamwe__logo" />
</androidx.constraintlayout.widget.ConstraintLayout>