<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_regwelcome"
        android:layout_width="351dp"
        android:layout_height="52dp"
        android:layout_marginTop="90dp"
        android:fontFamily="serif-monospace"
        android:lineSpacingExtra="8sp"
        android:text="@string/register_welcome"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register"
        app:layout_constraintVertical_bias="0.011" />

    <TextView
        android:id="@+id/tv_regmessage"
        android:layout_width="390dp"
        android:layout_height="273dp"
        android:fontFamily="serif-monospace"
        android:lineSpacingExtra="8sp"
        android:text="@string/register_message"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.746" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/assistant_extralight"
        android:text="@string/register_register"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/multiAutoCompleteTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228" />
</androidx.constraintlayout.widget.ConstraintLayout>